Updated ML script to fix date formatting issue

--- a/notebooks/LoadIntoPandas.ipynb
+++ b/notebooks/LoadIntoPandas.ipynb
@@ -81,215 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "Issue_Date                   object\n",
-      "Issue_Date_Parsed    datetime64[ns]\n",
-      "dtype: object\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Issue_Date</th>\n",
-       "      <th>Issue_Date_Parsed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>4357535</td>\n",
-       "      <td>4357535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>1724</td>\n",
-       "      <td>1724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>2016-01-19T00:00:00</td>\n",
-       "      <td>2016-01-19 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>4998</td>\n",
-       "      <td>4998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>first</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2010-01-09 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>last</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2019-01-10 00:00:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Issue_Date    Issue_Date_Parsed\n",
-       "count               4357535              4357535\n",
-       "unique                 1724                 1724\n",
-       "top     2016-01-19T00:00:00  2016-01-19 00:00:00\n",
-       "freq                   4998                 4998\n",
-       "first                   NaN  2010-01-09 00:00:00\n",
-       "last                    NaN  2019-01-10 00:00:00"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check issue parsing to make sure it's accurate\n",
-    "print(citations['Issue_Date']).isnull().sum() \n",
-    "\n",
-    "citations['Issue_Date_Parsed'] = pd.to_datetime(citations['Issue_Date'])\n",
-    "\n",
-    "print(citations[['Issue_Date','Issue_Date_Parsed']].dtypes)\n",
-    "citations[['Issue_Date','Issue_Date_Parsed']].head()\n",
-    "citations[['Issue_Date','Issue_Date_Parsed']].describe(include='all')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Plate_Expiry_Date</th>\n",
-       "      <th>Issue_Date_Parsed</th>\n",
-       "      <th>Plate_Expiry_Date_Parsed</th>\n",
-       "      <th>expired</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>200316.0</td>\n",
-       "      <td>2015-09-15</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>201605.0</td>\n",
-       "      <td>2015-12-17</td>\n",
-       "      <td>2016-05-01</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>201511.0</td>\n",
-       "      <td>2015-12-22</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>201701.0</td>\n",
-       "      <td>2015-12-22</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>201605.0</td>\n",
-       "      <td>2015-12-27</td>\n",
-       "      <td>2016-05-01</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Plate_Expiry_Date Issue_Date_Parsed Plate_Expiry_Date_Parsed  expired\n",
-       "0          200316.0        2015-09-15                      NaT    False\n",
-       "1          201605.0        2015-12-17               2016-05-01    False\n",
-       "2          201511.0        2015-12-22               2015-11-01     True\n",
-       "3          201701.0        2015-12-22               2017-01-01    False\n",
-       "4          201605.0        2015-12-27               2016-05-01    False"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check expiry date parsing to make sure it's accurate\n",
-    "citations['Plate_Expiry_Date'] = citations['Plate_Expiry_Date'].fillna('')\n",
-    "citations['Plate_Expiry_Date_Parsed'] = pd.to_datetime(citations['Plate_Expiry_Date'].str[:-2], format='%Y%m', errors='coerce')\n",
-    "citations['expired'] = citations['Plate_Expiry_Date_Parsed'] < citations['Issue_Date_Parsed']\n",
-    "\n",
-    "#citations[['Plate_Expiry_Date']][citations['Plate_Expiry_Date'].notnull()].head()\n",
-    "citations[['Plate_Expiry_Date','Issue_Date_Parsed', 'Plate_Expiry_Date_Parsed','expired']][citations['Plate_Expiry_Date'].notnull()].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# store original dates for comparison\n",
-    "citations['Issue_Date_Orig'] = citations['Issue_Date']\n",
-    "citations['Plate_Expiry_Date_Orig'] = citations['Plate_Expiry_Date']\n",
-    "\n",
     "# parse dates\n",
     "citations['Issue_Date'] = pd.to_datetime(citations['Issue_Date'])\n",
     "\n",
@@ -528,12 +323,13 @@
     "from math import sqrt\n",
     "import scipy.stats as st\n",
     "\n",
+    "# calculate z-stat\n",
     "numerator = (oos_prb - is_prb)\n",
     "denominator = sqrt(((prb)*(1-prb)) * ((1/oos_total)+(1/is_total)))\n",
     "z_stat = numerator / denominator\n",
     "print(z_stat)\n",
     "\n",
-    "# calculate z-stat\n",
+    "# calculate p-stat\n",
     "p_stat = st.norm.cdf(z_stat)\n",
     "print(1-p_stat)"
    ]
